Fix swagger params to make trying usable
