# docs/swagger.json
@@ -24,7 +24,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "actors"
+                    "Актёры"
                 ],
                 "summary": "Получить список актёров",
                 "responses": {
@@ -65,7 +65,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "actors"
+                    "Актёры"
                 ],
                 "summary": "Создать актёра",
                 "parameters": [
@@ -114,14 +114,14 @@
                     "application/json"
                 ],
                 "tags": [
-                    "actors"
+                    "Актёры"
                 ],
                 "summary": "Получить данные об актёре",
                 "parameters": [
                     {
                         "type": "integer",
                         "description": "ID актёра",
-                        "name": "actorID",
+                        "name": "id",
                         "in": "path",
                         "required": true
                     }
@@ -159,14 +159,14 @@
                     "application/json"
                 ],
                 "tags": [
-                    "actors"
+                    "Актёры"
                 ],
                 "summary": "Удалить данные об актёре",
                 "parameters": [
                     {
                         "type": "integer",
                         "description": "ID актёра",
-                        "name": "actorID",
+                        "name": "id",
                         "in": "path",
                         "required": true
                     }
@@ -207,14 +207,14 @@
                     "application/json"
                 ],
                 "tags": [
-                    "actors"
+                    "Актёры"
                 ],
                 "summary": "Изменить данные об актёре",
                 "parameters": [
                     {
                         "type": "integer",
                         "description": "ID актёра",
-                        "name": "actorID",
+                        "name": "id",
                         "in": "path",
                         "required": true
                     },
@@ -263,7 +263,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "movies"
+                    "Фильмы"
                 ],
                 "summary": "Получить список фильмов",
                 "parameters": [
@@ -319,7 +319,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "movies"
+                    "Фильмы"
                 ],
                 "summary": "Создать фильм",
                 "parameters": [
@@ -368,14 +368,14 @@
                     "application/json"
                 ],
                 "tags": [
-                    "movies"
+                    "Фильмы"
                 ],
                 "summary": "Получить данные об фильме",
                 "parameters": [
                     {
                         "type": "integer",
                         "description": "ID фильма",
-                        "name": "movieID",
+                        "name": "id",
                         "in": "path",
                         "required": true
                     }
@@ -413,14 +413,14 @@
                     "application/json"
                 ],
                 "tags": [
-                    "movies"
+                    "Фильмы"
                 ],
                 "summary": "Удалить данные об фильме",
                 "parameters": [
                     {
                         "type": "integer",
                         "description": "ID фильма",
-                        "name": "movieID",
+                        "name": "id",
                         "in": "path",
                         "required": true
                     }
@@ -461,14 +461,14 @@
                     "application/json"
                 ],
                 "tags": [
-                    "movies"
+                    "Фильмы"
                 ],
                 "summary": "Изменить данные об фильме",
                 "parameters": [
                     {
                         "type": "integer",
                         "description": "ID фильма",
-                        "name": "movieID",
+                        "name": "id",
                         "in": "path",
                         "required": true
                     },
@@ -520,7 +520,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "movies"
+                    "Поиск"
                 ],
                 "summary": "Искать фильм",
                 "parameters": [
